--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "eventemitter3": "^5.0.1",
     "framer-motion": "^10.16.5",
     "googleapis": "^128.0.0",
+    "mongodb": "^6.2.0",
     "next": "14.0.2",
     "react": "^18",
     "react-dom": "^18",
